--- a/task-4.ipynb
+++ b/task-4.ipynb
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,6 +991,240 @@
    "source": [
     "stringa = \"http?asdad\"\n",
     "print(stringa.find(\"https\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-23-b0d5c3362ba7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Brandy\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m ]\n\u001b[1;32m---> 17\u001b[1;33m \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mGSP\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msearch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0.2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\gsppy\\gsp.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, raw_transactions)\u001b[0m\n\u001b[0;32m     37\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mraw_transactions\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfreq_patterns\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 39\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_pre_processing\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mraw_transactions\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     40\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_pre_processing\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mraw_transactions\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\gsppy\\gsp.py\u001b[0m in \u001b[0;36m_pre_processing\u001b[1;34m(self, raw_transactions)\u001b[0m\n\u001b[0;32m     48\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmax_size\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mitem\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mraw_transactions\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     49\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtransactions\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mtuple\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mraw_transactions\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 50\u001b[1;33m         \u001b[0mcounts\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mCounter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchain\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_iterable\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mraw_transactions\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     51\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munique_candidates\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mtuple\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mc\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcounts\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     52\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\collections\\__init__.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, iterable, **kwds)\u001b[0m\n\u001b[0;32m    550\u001b[0m         '''\n\u001b[0;32m    551\u001b[0m         \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mCounter\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 552\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0miterable\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    553\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    554\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__missing__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\collections\\__init__.py\u001b[0m in \u001b[0;36mupdate\u001b[1;34m(self, iterable, **kwds)\u001b[0m\n\u001b[0;32m    635\u001b[0m                     \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mCounter\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0miterable\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# fast path when counter is empty\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    636\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 637\u001b[1;33m                 \u001b[0m_count_elements\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0miterable\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    638\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mkwds\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    639\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'list'"
+     ]
+    }
+   ],
+   "source": [
+    "from gsppy.gsp import GSP\n",
+    "\n",
+    "import copy\n",
+    "transactions = [\n",
+    "['C', 'A', 'A,' 'B', 'C'],\n",
+    "['A', 'B', 'C', 'B'],\n",
+    "['C', 'A', 'B', 'C'],\n",
+    "['A', 'B', 'B', 'C', 'A'],\n",
+    "]\n",
+    "dataset =  [\n",
+    "    [[\"Beer\"], [\"Brandy\"]],\n",
+    "    [[\"Juice\", \"Coke\"], [\"Beer\"], [\"Wine\", \"Cider\"]],\n",
+    "    [[\"Beer\", \"Gin\", \"Cider\"]],\n",
+    "    [[\"Beer\"], [\"Wine\", \"Cider\"], [\"Brandy\"]],\n",
+    "    [[\"Brandy\"]]\n",
+    "]\n",
+    "result = GSP(dataset).search(0.2)\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result, lvl 1: [([['Beer']], 4), ([['Brandy']], 3), ([['Cider']], 3), ([['Wine']], 2)]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[([['Beer']], 4),\n",
+       " ([['Brandy']], 3),\n",
+       " ([['Cider']], 3),\n",
+       " ([['Wine']], 2),\n",
+       " ([['Cider', 'Wine']], 2),\n",
+       " ([['Beer'], ['Brandy']], 2),\n",
+       " ([['Beer'], ['Cider']], 2),\n",
+       " ([['Beer'], ['Wine']], 2)]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\"\"\"\n",
+    "This is a simple recursive method that checks if subsequence is a subSequence of mainSequence\n",
+    "\"\"\"\n",
+    "def isSubsequence(mainSequence, subSequence):\n",
+    "    subSequenceClone = list(subSequence) # clone the sequence, because we will alter it\n",
+    "    return isSubsequenceRecursive(mainSequence, subSequenceClone) #start recursion\n",
+    "\n",
+    "\"\"\"\n",
+    "Function for the recursive call of isSubsequence, not intended for external calls\n",
+    "\"\"\"\n",
+    "def isSubsequenceRecursive(mainSequence, subSequenceClone, start=0):\n",
+    "    # Check if empty: End of recursion, all itemsets have been found\n",
+    "    if (not subSequenceClone):\n",
+    "        return True\n",
+    "    # retrieves element of the subsequence and removes is from subsequence \n",
+    "    firstElem = set(subSequenceClone.pop(0))\n",
+    "    # Search for the first itemset...\n",
+    "    for i in range(start, len(mainSequence)):\n",
+    "        if (set(mainSequence[i]).issuperset(firstElem)):\n",
+    "            # and recurse\n",
+    "            return isSubsequenceRecursive(mainSequence, subSequenceClone, i + 1)\n",
+    "    return False\n",
+    "\n",
+    "\"\"\"\n",
+    "Computes the length of the sequence (sum of the length of the contained itemsets)\n",
+    "\"\"\"\n",
+    "def sequenceLength(sequence):\n",
+    "    return sum(len(i) for i in sequence)\n",
+    "\n",
+    "\"\"\"\n",
+    "Computes the support of a sequence in a dataset\n",
+    "\"\"\"\n",
+    "def countSupport (dataset, candidateSequence):\n",
+    "    return sum(1 for seq in dataset if isSubsequence(seq, candidateSequence))\n",
+    "\"\"\"\n",
+    "Generates one candidate of length k from two candidates of length (k-1) as used in the AprioriAll algorithm\n",
+    "\"\"\"\n",
+    "def generateCandidatesForPair(cand1, cand2):\n",
+    "    cand1Clone = copy.deepcopy(cand1)\n",
+    "    cand2Clone = copy.deepcopy(cand2)\n",
+    "    # drop the leftmost item from cand1:\n",
+    "    if (len (cand1[0]) == 1):\n",
+    "        cand1Clone.pop(0)\n",
+    "    else:\n",
+    "        cand1Clone[0] = cand1Clone[0][1:]\n",
+    "    # drop the rightmost item from cand2:\n",
+    "    if (len (cand2[-1]) == 1):\n",
+    "        cand2Clone.pop(-1)\n",
+    "    else:\n",
+    "        cand2Clone[-1] = cand2Clone[-1][:-1]\n",
+    "    \n",
+    "    # if the result is not the same, then we dont need to join\n",
+    "    if not cand1Clone == cand2Clone:\n",
+    "        return []\n",
+    "    else:\n",
+    "        newCandidate = copy.deepcopy(cand1)\n",
+    "        if (len (cand2[-1]) == 1):\n",
+    "            newCandidate.append(cand2[-1])\n",
+    "        else:\n",
+    "            newCandidate [-1].extend(cand2[-1][-1])\n",
+    "        return newCandidate\n",
+    "\n",
+    "\"\"\"\n",
+    "Generates the set of candidates of length k from the set of frequent sequences with length (k-1)\n",
+    "\"\"\"\n",
+    "def generateCandidates(lastLevelCandidates):\n",
+    "    k = sequenceLength(lastLevelCandidates[0]) + 1\n",
+    "    if (k == 2):\n",
+    "        flatShortCandidates = [item for sublist2 in lastLevelCandidates for sublist1 in sublist2 for item in sublist1]\n",
+    "        result = [[[a, b]] for a in flatShortCandidates for b in flatShortCandidates if b > a]\n",
+    "        result.extend([[[a], [b]] for a in flatShortCandidates for b in flatShortCandidates])\n",
+    "        return result\n",
+    "    else:\n",
+    "        candidates = []\n",
+    "        for i in range(0, len(lastLevelCandidates)):\n",
+    "            for j in range(0, len(lastLevelCandidates)):\n",
+    "                newCand = generateCandidatesForPair(lastLevelCandidates[i], lastLevelCandidates[j])\n",
+    "                if (not newCand == []):\n",
+    "                    candidates.append(newCand)\n",
+    "        candidates.sort()\n",
+    "        return candidates\n",
+    "\n",
+    "\"\"\"\n",
+    "Computes all direct subsequence for a given sequence.\n",
+    "A direct subsequence is any sequence that originates from deleting exactly one item from any event in the original sequence.\n",
+    "\"\"\"\n",
+    "def generateDirectSubsequences(sequence):\n",
+    "    result = []\n",
+    "    for i, itemset in enumerate(sequence):\n",
+    "        if (len(itemset) == 1):\n",
+    "            sequenceClone = copy.deepcopy(sequence)\n",
+    "            sequenceClone.pop(i)\n",
+    "            result.append(sequenceClone)\n",
+    "        else:\n",
+    "            for j in range(len(itemset)):\n",
+    "                sequenceClone = copy.deepcopy(sequence)\n",
+    "                sequenceClone[i].pop(j)\n",
+    "                result.append(sequenceClone)\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "Prunes the set of candidates generated for length k given all frequent sequence of level (k-1), as done in AprioriAll\n",
+    "\"\"\"\n",
+    "def pruneCandidates(candidatesLastLevel, candidatesGenerated):\n",
+    "    return [cand for cand in candidatesGenerated if all(x in candidatesLastLevel for x in generateDirectSubsequences(cand))]\n",
+    "\n",
+    "\"\"\"\n",
+    "The AprioriAll algorithm. Computes the frequent sequences in a seqeunce dataset for a given minSupport\n",
+    "\n",
+    "Args:\n",
+    "    dataset: A list of sequences, for which the frequent (sub-)sequences are computed\n",
+    "    minSupport: The minimum support that makes a sequence frequent\n",
+    "    verbose: If true, additional information on the mining process is printed (i.e., candidates on each level)\n",
+    "Returns:\n",
+    "    A list of tuples (s, c), where s is a frequent sequence, and c is the count for that sequence\n",
+    "\"\"\"\n",
+    "def apriori(dataset, minSupport, verbose=False):\n",
+    "    global numberOfCountingOperations\n",
+    "    numberOfCountingOperations = 0\n",
+    "    Overall = []\n",
+    "    itemsInDataset = sorted(set ([item for sublist1 in dataset for sublist2 in sublist1 for item in sublist2]))\n",
+    "    singleItemSequences = [[[item]] for item in itemsInDataset]\n",
+    "    singleItemCounts = [(i, countSupport(dataset, i)) for i in singleItemSequences if countSupport(dataset, i) >= minSupport]\n",
+    "    Overall.append(singleItemCounts)\n",
+    "    print (\"Result, lvl 1: \" + str(Overall[0]))\n",
+    "    k = 1\n",
+    "    while (True):\n",
+    "        if not Overall [k - 1]:\n",
+    "            break\n",
+    "        # 1. Candidate generation\n",
+    "        candidatesLastLevel = [x[0] for x in Overall[k - 1]]\n",
+    "        candidatesGenerated = generateCandidates (candidatesLastLevel)\n",
+    "        # 2. Candidate pruning (using a \"containsall\" subsequences)\n",
+    "        candidatesPruned = [cand for cand in candidatesGenerated if all(x in candidatesLastLevel for x in generateDirectSubsequences(cand))]\n",
+    "        # 3. Candidate checking\n",
+    "        candidatesCounts = [(i, countSupport(dataset, i)) for i in candidatesPruned]\n",
+    "        resultLvl = [(i, count) for (i, count) in candidatesCounts if (count >= minSupport)]\n",
+    "        if verbose:\n",
+    "            print (\"Candidates generated, lvl \" + str(k + 1) + \": \" + str(candidatesGenerated))\n",
+    "            print (\"Candidates pruned, lvl \" + str(k + 1) + \": \" + str(candidatesPruned))\n",
+    "            print (\"Result, lvl \" + str(k + 1) + \": \" + str(resultLvl))\n",
+    "        Overall.append(resultLvl)\n",
+    "        k = k + 1\n",
+    "    # \"flatten\" Overall\n",
+    "    Overall = Overall [:-1]\n",
+    "    Overall = [item for sublist in Overall for item in sublist]\n",
+    "    return Overall\n",
+    "\n",
+    "dataset =  [\n",
+    "    [[\"Beer\"], [\"Brandy\"]],\n",
+    "    [[\"Juice\", \"Coke\"], [\"Beer\"], [\"Wine\", \"Cider\"]],\n",
+    "    [[\"Beer\", \"Gin\", \"Cider\"]],\n",
+    "    [[\"Beer\"], [\"Wine\", \"Cider\"], [\"Brandy\"]],\n",
+    "    [[\"Brandy\"]]\n",
+    "]\n",
+    "apriori(dataset, 2, verbose=False)"
    ]
   }
  ],
